--- a/login.html
+++ b/login.html
@@ -9,40 +9,23 @@
 </head>
 <body>
     <header>
-        <!-- Logo Image -->
-        <img src="BYU_Disc_Golf_Team_logo.jpg" alt="BYU Disc Golf Team Logo" style="max-width: 200px; height: auto;" />
-        
-        <h1>BYU DG Login</h1>
+        <h1>BYU Disc Golf</h1>
         <nav>
             <menu>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="leaderboard.html">Leaderboard</a></li>
                 <li><a href="stats.html">Stats</a></li>
-                <li><a href="scorecard.html">Start a round</a></li>
+                <li><a href="scorecard.html">Keep Score</a></li>
+                <li><a href="login.html">Login</a></li>
             </menu>
         </nav>
-        <hr />
     </header>
 
-    <main>
-        <div class="login-container">
-            <form>
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" placeholder="Enter your username" required />
-
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" placeholder="Enter your password" required />
-
-                <input type="submit" value="Login" />
-            </form>
-        </div>
-    </main>
-
     <footer>
-        <hr />
         <span>Created by Abe Field</span>
         <br />
         <a href="https://github.com/AbeFielding/startup">GitHub Repository</a>
+        <img src="BYU_Disc_Golf_Team_logo.jpg" alt="BYU Disc Golf Team Logo" class="footer-logo" />
     </footer>
 </body>
 </html>
