--- a/leaderboard.html
+++ b/leaderboard.html
@@ -9,70 +9,23 @@
 </head>
 <body>
     <header>
-        <img src="BYU_Disc_Golf_Team_logo.jpg" alt="BYU Disc Golf Team Logo" style="max-width: 200px; height: auto;" />
-        <h1>BYU Disc Golf Scores and Stats</h1>
+        <h1>BYU Disc Golf</h1>
         <nav>
             <menu>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="leaderboard.html">Leaderboard</a></li>
                 <li><a href="stats.html">Stats</a></li>
-                <li><a href="scorecard.html">Start a round</a></li>
+                <li><a href="scorecard.html">Keep Score</a></li>
                 <li><a href="login.html">Login</a></li>
             </menu>
         </nav>
-        <hr />
     </header>
 
-    <main>
-        <!-- Course selection -->
-        <h2>Select Course to View Leaderboard</h2>
-        <select>
-            <option value="course1">Utah State Hospital</option>
-            <option value="course2">Jolley's Ranch</option>
-            <option value="course3">Dragonfly</option>
-            <option value="course4">Art Dye</option>
-        </select>
-
-        <!-- Placeholder for Real-Time Communication -->
-        <div class="placeholder" id="real-time-placeholder">
-            <h3>Real-Time Player Updates</h3>
-            <p>This section will show current players, their scores, and the hole and course they are on.</p>
-        </div>
-
-        <!-- Leaderboard table with placeholder text -->
-        <table>
-            <thead>
-                <tr>
-                    <th>Rank</th>
-                    <th>Name</th>
-                    <th>Score</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>Player 1</td>
-                    <td>0</td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td>Player 2</td>
-                    <td>0</td>
-                </tr>
-                <tr>
-                    <td>3</td>
-                    <td>Player 3</td>
-                    <td>0</td>
-                </tr>
-            </tbody>
-        </table>
-    </main>
-
     <footer>
-        <hr />
         <span>Created by Abe Field</span>
         <br />
         <a href="https://github.com/AbeFielding/startup">GitHub Repository</a>
+        <img src="BYU_Disc_Golf_Team_logo.jpg" alt="BYU Disc Golf Team Logo" class="footer-logo" />
     </footer>
 </body>
 </html>
