added home image to index. and updated style

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="leaderboard.html">Leaderboard</a></li>
                 <li><a href="stats.html">Stats</a></li>
-                <li><a href="scorecard.html">Keep Score</a></li>
+                <li><a href="scorecard.html">Keep-Score</a></li>
                 <li><a href="login.html">Login</a></li>
             </menu>
         </nav>
     </header>
 
-    <main>
-        <img src="Teamimg.jpg" alt="Team Image" class="full-background" />
+    <main class="index-main">
+      <img src="Teamimg.jpg" alt="Team Image" />
     </main>
 
     <footer>
