created a leaderboard.css

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Leaderboard - BYU DG Stats</title>
     <link rel="icon" href="favicon.ico" />
-    <link rel="stylesheet" href="style.css" /> <!-- Link to your external CSS -->
+    <link rel="stylesheet" href="leaderboard.css" /> <!-- Link to your external CSS -->
 </head>
 <body>
     <header>
