background image for leaderboard

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -5,21 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Leaderboard - BYU DG Stats</title>
     <link rel="icon" href="favicon.ico" />
-    <link rel="stylesheet" href="leaderboard.css" /> <!-- Link to your external CSS -->
+    <link rel="stylesheet" href="leaderboard.css" />
 </head>
 <body>
     <header>
         <h1>BYU Disc Golf</h1>
         <nav>
-            <menu>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="leaderboard.html">Leaderboard</a></li>
-                <li><a href="stats.html">Stats</a></li>
-                <li><a href="scorecard.html">Keep Score</a></li>
-                <li><a href="login.html">Login</a></li>
-            </menu>
+            <ul>
+                <li><a href="index.html" aria-label="Home">Home</a></li>
+                <li><a href="leaderboard.html" aria-label="Leaderboard">Leaderboard</a></li>
+                <li><a href="stats.html" aria-label="Stats">Stats</a></li>
+                <li><a href="scorecard.html" aria-label="Keep Score">Keep Score</a></li>
+                <li><a href="login.html" aria-label="Login">Login</a></li>
+            </ul>
         </nav>
     </header>
+
+    <main class="leaderboard-main">
+        <!-- Content goes here -->
+    </main>
 
     <footer>
         <span>Created by Abe Field</span>
