created leaderboard display

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -5,24 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Leaderboard - BYU DG Stats</title>
     <link rel="icon" href="favicon.ico" />
-    <link rel="stylesheet" href="leaderboard.css" />
+    <link rel="stylesheet" href="leaderboard.css" /> <!-- Link to your external CSS -->
 </head>
 <body>
     <header>
         <h1>BYU Disc Golf</h1>
         <nav>
             <ul>
-                <li><a href="index.html" aria-label="Home">Home</a></li>
-                <li><a href="leaderboard.html" aria-label="Leaderboard">Leaderboard</a></li>
-                <li><a href="stats.html" aria-label="Stats">Stats</a></li>
-                <li><a href="scorecard.html" aria-label="Keep Score">Keep Score</a></li>
-                <li><a href="login.html" aria-label="Login">Login</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="leaderboard.html">Leaderboard</a></li>
+                <li><a href="stats.html">Stats</a></li>
+                <li><a href="scorecard.html">Keep Score</a></li>
+                <li><a href="login.html">Login</a></li>
             </ul>
         </nav>
     </header>
 
     <main class="leaderboard-main">
-        <!-- Content goes here -->
+        <div class="leaderboard">
+            <h2>Best Avg Score</h2>
+            <ol>
+                <li>
+                    <span class="place">1st Place:</span>
+                    <span class="name">Player Name 1</span>
+                    <span class="score">Score: -10</span>
+                </li>
+                <li>
+                    <span class="place">2nd Place:</span>
+                    <span class="name">Player Name 2</span>
+                    <span class="score">Score: -8</span>
+                </li>
+                <li>
+                    <span class="place">3rd Place:</span>
+                    <span class="name">Player Name 3</span>
+                    <span class="score">Score: -6</span>
+                </li>
+            </ol>
+        </div>
     </main>
 
     <footer>
