--- a/login.html
+++ b/login.html
@@ -5,21 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login - BYU DG Stats</title>
     <link rel="icon" href="favicon.ico" />
-    <link rel="stylesheet" href="style.css" /> <!-- Link to your existing CSS file -->
+    <link rel="stylesheet" href="login.css" />
 </head>
 <body>
     <header>
         <h1>BYU Disc Golf</h1>
         <nav>
-            <menu>
+            <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="leaderboard.html">Leaderboard</a></li>
                 <li><a href="stats.html">Stats</a></li>
                 <li><a href="scorecard.html">Keep Score</a></li>
                 <li><a href="login.html">Login</a></li>
-            </menu>
+            </ul>
         </nav>
     </header>
+
+    <main class="main">
+        <div class="login-form">
+            <h2>Login</h2>
+            <form action="login_process.html" method="POST">
+                <input type="text" name="username" placeholder="Username" required>
+                <input type="password" name="password" placeholder="Password" required>
+                <button type="submit">Login</button>
+            </form>
+        </div>
+    </main>
 
     <footer>
         <span>Created by Abe Field</span>
