--- a/leaderboard.html
+++ b/leaderboard.html
@@ -15,7 +15,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="leaderboard.html">Leaderboard</a></li>
                 <li><a href="stats.html">Stats</a></li>
-                <li><a href="scorecard.html">Keep Score</a></li>
+                <li><a href="scorecard.html">Keep-Score</a></li>
                 <li><a href="login.html">Login</a></li>
             </ul>
         </nav>
