--- a/index.html
+++ b/index.html
@@ -1,34 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BYU DG Scorecard</title>
-    <link rel="icon" href="favicon.ico" />
-    <link rel="stylesheet" href="index.css" />
-</head>
-<body>
-    <header>
-        <h1>BYU Disc Golf</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="leaderboard.html">Leaderboard</a></li>
-                <li><a href="stats.html">Stats</a></li>
-                <li><a href="scorecard.html">Keep-Score</a></li>
-                <li><a href="login.html">Login</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <main class="index-main">
-    </main>
-
-    <footer>
-        <span>Created by Abe Field</span>
-        <br />
-        <a href="https://github.com/AbeFielding/startup">GitHub Repository</a>
-        <img src="BYU_Disc_Golf_Team_logo.jpg" alt="BYU Disc Golf Team Logo" class="footer-logo" />
-    </footer>
-</body>
+    <title>Vite + React</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
